# KLT_gpgpu

./: .gitignore  Android.mk  CMakeLists.txt  README.txt
common/: CMakeLists.txt  gl_setup.cpp  gl_setup.h  misc_headers.h  mylog.h
cpu/: CMakeLists.txt  klt_cpu.cpp  klt_cpu.h
gpu/: Android.mk  CMakeLists.txt  ShaderReader.cc  ShaderReader.h  base_gpgpu.cpp  base_gpgpu.h  gl_apis.cpp  gl_apis.h  klt_gpu.cpp  klt_gpu.h
shaders/: back_image.fsh  dbg_shader.fsh  getA.fsh  getb.fsh  gpgpu_quad.vsh  next_level.fsh  track.fsh
tests/: CMakeLists.txt  main.cpp  test_image.cpp  test_image_gpu.cpp  test_video.cpp  test_video_gpu.cpp
